samples/_failures_safe/1761296921_27c9f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d79b1822.c: In function ‘main’:
./samples/SAFE/__tmp_d79b1822.c:155:5: error: expected expression at end of input
  155 |     if (result == NULL)
      |     ^~
./samples/SAFE/__tmp_d79b1822.c:155:5: error: expected declaration or statement at end of input
